{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 61,
  "lineage": "fb811f7a-5038-242c-4f9e-9ba27c7c8bce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "vpc_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0e57b6c97fca52c80",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0600ce10720550eee",
              "subnet-0f7a4c6e27e763ae1"
            ],
            "tags": {
              "Name": "attach_ind_test",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "tags_all": {
              "Name": "attach_ind_test",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-022b53fee4b0e345b",
            "vpc_id": "vpc-05bbd24f3a3d4e4d4",
            "vpc_owner_id": "854269502421"
          },
          "dependencies": [
            "aws_subnet.subnet_private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avzone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034150740aa794221",
            "arn": "arn:aws:ec2:ap-southeast-2:854269502421:elastic-ip/eipalloc-034150740aa794221",
            "domain": "vpc",
            "id": "eipalloc-034150740aa794221",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-54-79-150-176.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.79.150.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ind_test_pip_natgw_2a",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "tags_all": {
              "Name": "ind_test_pip_natgw_2a",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e1697eab5aab37b",
            "arn": "arn:aws:ec2:ap-southeast-2:854269502421:elastic-ip/eipalloc-05e1697eab5aab37b",
            "domain": "vpc",
            "id": "eipalloc-05e1697eab5aab37b",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-3-104-41-141.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.104.41.141",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ind_test_pip_natgw_2b",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "tags_all": {
              "Name": "ind_test_pip_natgw_2b",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:854269502421:internet-gateway/igw-0196d94dfd5032dd5",
            "id": "igw-0196d94dfd5032dd5",
            "owner_id": "854269502421",
            "tags": {
              "Name": "ind_test_igw",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "tags_all": {
              "Name": "ind_test_igw",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "vpc_id": "vpc-05bbd24f3a3d4e4d4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-034150740aa794221",
            "association_id": "eipassoc-0d2a7ce5fb9308318",
            "connectivity_type": "public",
            "id": "nat-01d022f0dac962196",
            "network_interface_id": "eni-0f152c13e98d7122a",
            "private_ip": "10.250.0.175",
            "public_ip": "54.79.150.176",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08e89a8cc1e610d02",
            "tags": {
              "Name": "ind_test_natgw_2a",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "tags_all": {
              "Name": "ind_test_natgw_2a",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            }
          },
          "dependencies": [
            "aws_eip.natgw_pip",
            "aws_internet_gateway.igw",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avzone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e1697eab5aab37b",
            "association_id": "eipassoc-05afa09850ff87be7",
            "connectivity_type": "public",
            "id": "nat-0593fdc4fc782ba10",
            "network_interface_id": "eni-0b1f4cb386fbc8956",
            "private_ip": "10.250.128.185",
            "public_ip": "3.104.41.141",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-077c3d8504dc72237",
            "tags": {
              "Name": "ind_test_natgw_2b",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "tags_all": {
              "Name": "ind_test_natgw_2b",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            }
          },
          "dependencies": [
            "aws_eip.natgw_pip",
            "aws_internet_gateway.igw",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avzone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-035c34104f90242a0",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01d022f0dac962196",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-022b53fee4b0e345b",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-022b53fee4b0e345b",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-022b53fee4b0e345b",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ind_test_tgw_rt_2a",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "tags_all": {
              "Name": "ind_test_tgw_rt_2a",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bbd24f3a3d4e4d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway_vpc_attachment.vpc_attach",
            "aws_eip.natgw_pip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_subnet.subnet_private",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avzone"
          ]
        },
        {
          "index_key": 1,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-0bcdc88ea75ddcd90",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0593fdc4fc782ba10",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-022b53fee4b0e345b",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/12",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-022b53fee4b0e345b",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-022b53fee4b0e345b",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ind_test_tgw_rt_2b",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "tags_all": {
              "Name": "ind_test_tgw_rt_2b",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bbd24f3a3d4e4d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway_vpc_attachment.vpc_attach",
            "aws_eip.natgw_pip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_subnet.subnet_private",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avzone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:854269502421:route-table/rtb-0c1a5b39a1787a2fe",
            "id": "rtb-0c1a5b39a1787a2fe",
            "owner_id": "854269502421",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0196d94dfd5032dd5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ind_test_public_rt_2a",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "tags_all": {
              "Name": "ind_test_public_rt_2a",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bbd24f3a3d4e4d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:854269502421:route-table/rtb-07385787551735d13",
            "id": "rtb-07385787551735d13",
            "owner_id": "854269502421",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0196d94dfd5032dd5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ind_test_public_rt_2b",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "tags_all": {
              "Name": "ind_test_public_rt_2b",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bbd24f3a3d4e4d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5d9ceedb8d03a6c",
            "route_table_id": "rtb-0c1a5b39a1787a2fe",
            "subnet_id": "subnet-08e89a8cc1e610d02"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table_public",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avzone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f57d9f9f237561f",
            "route_table_id": "rtb-07385787551735d13",
            "subnet_id": "subnet-077c3d8504dc72237"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table_public",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.avzone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:854269502421:subnet/subnet-0600ce10720550eee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.250.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0600ce10720550eee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854269502421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ind_test_tgw_subnet_2a",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "tags_all": {
              "Name": "ind_test_tgw_subnet_2a",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "vpc_id": "vpc-05bbd24f3a3d4e4d4"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.avzone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:854269502421:subnet/subnet-0f7a4c6e27e763ae1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.250.129.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7a4c6e27e763ae1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854269502421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ind_test_tgw_subnet_2b",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "tags_all": {
              "Name": "ind_test_tgw_subnet_2b",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "vpc_id": "vpc-05bbd24f3a3d4e4d4"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.avzone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:854269502421:subnet/subnet-08e89a8cc1e610d02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.250.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e89a8cc1e610d02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854269502421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ind_test_public_subnet_2a",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "tags_all": {
              "Name": "ind_test_public_subnet_2a",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "vpc_id": "vpc-05bbd24f3a3d4e4d4"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.avzone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:854269502421:subnet/subnet-077c3d8504dc72237",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.250.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077c3d8504dc72237",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854269502421",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ind_test_public_subnet_2b",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "tags_all": {
              "Name": "ind_test_public_subnet_2b",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "vpc_id": "vpc-05bbd24f3a3d4e4d4"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.avzone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:854269502421:vpc/vpc-05bbd24f3a3d4e4d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.250.0.0/16",
            "default_network_acl_id": "acl-0ee0c7fc7aaa87d8a",
            "default_route_table_id": "rtb-0c7431d7a550c891a",
            "default_security_group_id": "sg-04e155d0aac07ed2c",
            "dhcp_options_id": "dopt-0c3ccbf219f14ecf3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05bbd24f3a3d4e4d4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7431d7a550c891a",
            "owner_id": "854269502421",
            "tags": {
              "Name": "ind_test",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            },
            "tags_all": {
              "Name": "ind_test",
              "application": "VPC",
              "creator": "joshua.xu@inde.nz",
              "environment": "test",
              "managedBy": "juan.rossi@indevin.com"
            }
          }
        }
      ]
    }
  ]
}